experimental/ir/testdata/editions/features_2024_in_2023.proto.stderr.txt
error: `enum_name_uses_string_view` is not supported in Edition 2023
  --> testdata/editions/features_2024_in_2023.proto:10:8
   |
 1 | edition = "2023";
   |           ------ edition specified here
...
 9 | // File-level Edition 2024 features
10 | option features.(pb.cpp).enum_name_uses_string_view = true;
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: `enum_name_uses_string_view` requires at least Edition 2024

error: `strip_enum_prefix` is not supported in Edition 2023
  --> testdata/editions/features_2024_in_2023.proto:11:8
   |
 1 | edition = "2023";
   |           ------ edition specified here
...
10 | option features.(pb.cpp).enum_name_uses_string_view = true;
11 | option features.(pb.go).strip_enum_prefix = STRIP_ENUM_PREFIX_STRIP;
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: `strip_enum_prefix` requires at least Edition 2024

error: `large_enum` is not supported in Edition 2023
  --> testdata/editions/features_2024_in_2023.proto:12:8
   |
 1 | edition = "2023";
   |           ------ edition specified here
...
11 | option features.(pb.go).strip_enum_prefix = STRIP_ENUM_PREFIX_STRIP;
12 | option features.(pb.java).large_enum = true;
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: `large_enum` requires at least Edition 2024

error: `default_symbol_visibility` is not supported in Edition 2023
  --> testdata/editions/features_2024_in_2023.proto:13:8
   |
 1 | edition = "2023";
   |           ------ edition specified here
...
12 | option features.(pb.java).large_enum = true;
13 | option features.default_symbol_visibility = EXPORT_TOP_LEVEL;
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: `default_symbol_visibility` requires at least Edition 2024

error: `enforce_naming_style` is not supported in Edition 2023
  --> testdata/editions/features_2024_in_2023.proto:14:8
   |
 1 | edition = "2023";
   |           ------ edition specified here
...
13 | option features.default_symbol_visibility = EXPORT_TOP_LEVEL;
14 | option features.enforce_naming_style = STYLE2024;
   |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: `enforce_naming_style` requires at least Edition 2024

error: `nest_in_file_class` is not supported in Edition 2023
  --> testdata/editions/features_2024_in_2023.proto:17:10
   |
 1 | edition = "2023";
   |           ------ edition specified here
...
17 |   option features.(pb.java).nest_in_file_class = YES;
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: `nest_in_file_class` requires at least Edition 2024

error: `enforce_naming_style` is not supported in Edition 2023
  --> testdata/editions/features_2024_in_2023.proto:18:10
   |
 1 | edition = "2023";
   |           ------ edition specified here
...
17 |   option features.(pb.java).nest_in_file_class = YES;
18 |   option features.enforce_naming_style = STYLE2024;
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: `enforce_naming_style` requires at least Edition 2024

error: `enforce_naming_style` is not supported in Edition 2023
  --> testdata/editions/features_2024_in_2023.proto:20:26
   |
 1 | edition = "2023";
   |           ------ edition specified here
...
20 |   string test_field = 1 [features.enforce_naming_style = STYLE2024];
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: `enforce_naming_style` requires at least Edition 2024

error: `enforce_naming_style` is not supported in Edition 2023
  --> testdata/editions/features_2024_in_2023.proto:23:12
   |
 1 | edition = "2023";
   |           ------ edition specified here
...
23 |     option features.enforce_naming_style = STYLE2024;
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: `enforce_naming_style` requires at least Edition 2024

error: `enforce_naming_style` is not supported in Edition 2023
  --> testdata/editions/features_2024_in_2023.proto:27:26
   |
 1 | edition = "2023";
   |           ------ edition specified here
...
27 |   extensions 100 to 200 [features.enforce_naming_style = STYLE2024];
   |                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: `enforce_naming_style` requires at least Edition 2024

error: `large_enum` is not supported in Edition 2023
  --> testdata/editions/features_2024_in_2023.proto:31:10
   |
 1 | edition = "2023";
   |           ------ edition specified here
...
31 |   option features.(pb.java).large_enum = true;
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: `large_enum` requires at least Edition 2024

error: `nest_in_file_class` is not supported in Edition 2023
  --> testdata/editions/features_2024_in_2023.proto:32:10
   |
 1 | edition = "2023";
   |           ------ edition specified here
...
31 |   option features.(pb.java).large_enum = true;
32 |   option features.(pb.java).nest_in_file_class = YES;
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: `nest_in_file_class` requires at least Edition 2024

error: `enum_name_uses_string_view` is not supported in Edition 2023
  --> testdata/editions/features_2024_in_2023.proto:33:10
   |
 1 | edition = "2023";
   |           ------ edition specified here
...
32 |   option features.(pb.java).nest_in_file_class = YES;
33 |   option features.(pb.cpp).enum_name_uses_string_view = true;
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: `enum_name_uses_string_view` requires at least Edition 2024

error: `strip_enum_prefix` is not supported in Edition 2023
  --> testdata/editions/features_2024_in_2023.proto:34:10
   |
 1 | edition = "2023";
   |           ------ edition specified here
...
33 |   option features.(pb.cpp).enum_name_uses_string_view = true;
34 |   option features.(pb.go).strip_enum_prefix = STRIP_ENUM_PREFIX_STRIP;
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: `strip_enum_prefix` requires at least Edition 2024

error: `enforce_naming_style` is not supported in Edition 2023
  --> testdata/editions/features_2024_in_2023.proto:35:10
   |
 1 | edition = "2023";
   |           ------ edition specified here
...
34 |   option features.(pb.go).strip_enum_prefix = STRIP_ENUM_PREFIX_STRIP;
35 |   option features.enforce_naming_style = STYLE2024;
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: `enforce_naming_style` requires at least Edition 2024

error: `nest_in_file_class` is not supported in Edition 2023
  --> testdata/editions/features_2024_in_2023.proto:45:10
   |
 1 | edition = "2023";
   |           ------ edition specified here
...
45 |   option features.(pb.java).nest_in_file_class = YES;
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: `nest_in_file_class` requires at least Edition 2024

error: `enforce_naming_style` is not supported in Edition 2023
  --> testdata/editions/features_2024_in_2023.proto:46:10
   |
 1 | edition = "2023";
   |           ------ edition specified here
...
45 |   option features.(pb.java).nest_in_file_class = YES;
46 |   option features.enforce_naming_style = STYLE2024;
   |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: `enforce_naming_style` requires at least Edition 2024

error: `enforce_naming_style` is not supported in Edition 2023
  --> testdata/editions/features_2024_in_2023.proto:49:12
   |
 1 | edition = "2023";
   |           ------ edition specified here
...
49 |     option features.enforce_naming_style = STYLE2024;
   |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = help: `enforce_naming_style` requires at least Edition 2024

encountered 18 errors
